# cyberwave-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh
cmake/: CyberwaveCppSDKBuildConfig.cmake.in  CyberwaveCppSDKConfig.cmake.in
examples/: CMakeLists.txt  alerts.cpp  camera_stream.cpp  camera_stream_opencv.cpp  capture_frame.cpp  command_receiver_simple.cpp  compact.cpp  complex_update_example.cpp  depth_stream.cpp  go2_locomotion.cpp  mixed_example.cpp  mqtt_example.cpp  quickstart.cpp  rest_example.cpp  simple_update_example.cpp  state_update_example.cpp  twin_example.cpp  workflows.cpp
include/cyberwave/: alerts.h  assets.h  camera_streaming.h  client.h  compact.h  config.h  constants.h  cyberwave_mqtt_adapter.h  cyberwave_mqtt_client_adapter.h  data.h  device_pairing.h  edges.h  environments.h  exceptions.h  joints.h  keyboard.h  locomotion_contracts.h  manifest.h  motion.h  mqtt_interface.h  navigation.h  paho_mqtt_adapter.h  projects.h  scene.h  twin.h  twin_subclasses.h  twins.h  utils.h  workers.h  workflows.h  workspaces.h
include/cyberwave/edge/: amr_adapter.h  amr_edge_node.h  amr_types.h  base_edge_node.h  edge_config.h
mqtt/: CMakeLists.txt  constants.h  mqtt_client.cpp  mqtt_client.h
rest/: CMakeLists.txt
rest/include/CppRestOpenAPIClient/: AnyType.h  ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
rest/include/CppRestOpenAPIClient/api/: AdminApi.h  AgentsApi.h  CRMApi.h  CRMInboxApi.h  CatalogApi.h  CloudNodeApi.h  CloudNodeWorkloadsApi.h  ContactApi.h  ContractsApi.h  DefaultApi.h  DockerRegistryApi.h  FeaturesApi.h  ProfileApi.h
rest/include/CppRestOpenAPIClient/model/: AIMetricsSchema.h  AIUsageCostSourceBreakdown.h  AIUsageDayBucket.h  AIUsageSummary.h  AIUsageTotals.h  AddMemberByEmailRequest.h  AddMemberByEmailResponse.h  AddMemberUserSchema.h  AdminLabInfoSchema.h  AdminLabOverviewSchema.h  AdminSessionSchema.h  AgentApplyWorkflowPlanSchema.h  AgentControlAction.h  AgentControlActionSpecSchema.h  AgentControlCancelRequest.h  AgentControlCapabilityDetailsSchema.h  AgentControlDispatchRequest.h  AgentControlEvidenceResolveRequest.h  AgentControlEvidenceResolveResponse.h  AgentControlModelOptionSchema.h  AgentControlOptionsSchema.h  AgentControlPerceptionOptionsSchema.h  AgentControlPerceptionTaskOptionSchema.h  AgentControlPlanRequest.h  AgentControlPlanResponse.h  AgentControlPromptMotionOptionsSchema.h  AgentControlRouteResolveRequest.h  AgentControlTargetCorrectionRequest.h  AgentControlVisualizationLayer.h  AgentControllerRuntimeRouteRefSchema.h  AgentCreateEnvironmentResponseSchema.h  AgentCreateEnvironmentSchema.h  AgentEmbodimentContextSchema.h  AgentPlanResponseSchema.h  AgentPlanSchema.h  AgentPreviewResponseSchema.h  AgentPreviewSchema.h  AgentProposalSchema.h  AgentSetupAndDraftResponseSchema.h  AgentSetupAndDraftSchema.h  (+486 more)
rest/src/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
rest/src/api/: AdminApi.cpp  AgentsApi.cpp  CRMApi.cpp  CRMInboxApi.cpp  CatalogApi.cpp  CloudNodeApi.cpp  CloudNodeWorkloadsApi.cpp  ContactApi.cpp  ContractsApi.cpp  DefaultApi.cpp  DockerRegistryApi.cpp  FeaturesApi.cpp  ProfileApi.cpp
rest/src/model/: AIMetricsSchema.cpp  AIUsageCostSourceBreakdown.cpp  AIUsageDayBucket.cpp  AIUsageSummary.cpp  AIUsageTotals.cpp  AddMemberByEmailRequest.cpp  AddMemberByEmailResponse.cpp  AddMemberUserSchema.cpp  AdminLabInfoSchema.cpp  AdminLabOverviewSchema.cpp  AdminSessionSchema.cpp  AgentApplyWorkflowPlanSchema.cpp  AgentControlAction.cpp  AgentControlActionSpecSchema.cpp  AgentControlCancelRequest.cpp  AgentControlCapabilityDetailsSchema.cpp  AgentControlDispatchRequest.cpp  AgentControlEvidenceResolveRequest.cpp  AgentControlEvidenceResolveResponse.cpp  AgentControlModelOptionSchema.cpp  AgentControlOptionsSchema.cpp  AgentControlPerceptionOptionsSchema.cpp  AgentControlPerceptionTaskOptionSchema.cpp  AgentControlPlanRequest.cpp  AgentControlPlanResponse.cpp  AgentControlPromptMotionOptionsSchema.cpp  AgentControlRouteResolveRequest.cpp  AgentControlTargetCorrectionRequest.cpp  AgentControlVisualizationLayer.cpp  AgentControllerRuntimeRouteRefSchema.cpp  AgentCreateEnvironmentResponseSchema.cpp  AgentCreateEnvironmentSchema.cpp  AgentEmbodimentContextSchema.cpp  AgentPlanResponseSchema.cpp  AgentPlanSchema.cpp  AgentPreviewResponseSchema.cpp  AgentPreviewSchema.cpp  AgentProposalSchema.cpp  AgentSetupAndDraftResponseSchema.cpp  AgentSetupAndDraftSchema.cpp  (+486 more)
src/cyberwave/: alerts.cpp  assets.cpp  camera_streaming.cpp  client.cpp  client_internal.h  compact.cpp  config.cpp  data.cpp  device_pairing.cpp  edges.cpp  environments.cpp  exceptions.cpp  joints.cpp  keyboard.cpp  manifest.cpp  motion.cpp  navigation.cpp  projects.cpp  rest_helpers.h  scene.cpp  source_type_utils.h  twin.cpp  twin_subclasses.cpp  twins.cpp  utils.cpp  workers.cpp  workflows.cpp  workspaces.cpp
src/cyberwave/edge/: amr_edge_node.cpp  amr_types.cpp  base_edge_node.cpp  edge_config.cpp
tests/: .dockerignore  CMakeLists.txt  Dockerfile  KNOWN_ISSUES.md  README.md  run-tests.sh  test_alerts.cpp  test_amr_edge_node.cpp  test_assets.cpp  test_camera_streaming.cpp  test_client.cpp  test_compact.cpp  test_config.cpp  test_data.cpp  test_depth_streaming.cpp  test_device_pairing.cpp  test_edge_node.cpp  test_edges.cpp  test_environments.cpp  test_exceptions.cpp  test_keyboard.cpp  test_locomotion_contracts.cpp  test_manifest.cpp  test_motion.cpp  test_mqtt.cpp  test_mqtt_config.cpp  test_mqtt_interface.cpp  test_navigation.cpp  test_projects.cpp  test_scene.cpp  test_sdk.cpp  test_twin.cpp  test_twin_subclasses.cpp  test_twins.cpp  test_utils.cpp  test_workers.cpp  test_workflows.cpp  test_workspaces.cpp
tests/fixtures/scripts/: create_ci_twin.py
